src/parser/CmmParser.java
// Generated from C:/Users/Carlos Manrique/IdeaProjects/DLP/src/parser\Cmm.g4 by ANTLR 4.8
package parser;

    import ast.*;
    import java.util.*;
    import parser.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, WHITE_SPACE=37, NEW_LINE=38, 
		TAB=39, SINGLE_LINE_COMMENT=40, MULTILINE_COMMENT=41, REAL_CONSTANT=42, 
		ID=43, INT_CONSTANT=44, CHAR_CONSTANT=45;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_mainFunction = 2, RULE_variableDefinition = 3, 
		RULE_functionDefinition = 4, RULE_functionParameters = 5, RULE_functionBlock = 6, 
		RULE_statement = 7, RULE_functionArguments = 8, RULE_block = 9, RULE_expression = 10, 
		RULE_type = 11, RULE_voidType = 12, RULE_recordType = 13, RULE_recordField = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "mainFunction", "variableDefinition", "functionDefinition", 
			"functionParameters", "functionBlock", "statement", "functionArguments", 
			"block", "expression", "type", "voidType", "recordType", "recordField"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'('", "')'", "','", "';'", "'{'", "'}'", "'='", "'while'", 
			"'if'", "'else'", "'return'", "'read'", "'write'", "'['", "']'", "'.'", 
			"'-'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", 
			"'=='", "'&&'", "'||'", "'!'", "'int'", "'char'", "'double'", "'void'", 
			"'struct'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "WHITE_SPACE", "NEW_LINE", "TAB", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", 
			"REAL_CONSTANT", "ID", "INT_CONSTANT", "CHAR_CONSTANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> definitions = new ArrayList<Definition>();
		public DefinitionContext definition;
		public MainFunctionContext mainFunction;
		public MainFunctionContext mainFunction() {
			return getRuleContext(MainFunctionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(30);
					((ProgramContext)_localctx).definition = definition();
					_localctx.definitions.addAll(((ProgramContext)_localctx).definition.ast);
					}
					} 
				}
				setState(37);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(38);
			((ProgramContext)_localctx).mainFunction = mainFunction();
			_localctx.definitions.add(((ProgramContext)_localctx).mainFunction.ast);
			setState(40);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(0,0,_localctx.definitions);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public VariableDefinitionContext variableDefinition;
		public FunctionDefinitionContext functionDefinition;
		public VariableDefinitionContext variableDefinition() {
			return getRuleContext(VariableDefinitionContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				((DefinitionContext)_localctx).variableDefinition = variableDefinition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).variableDefinition.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				((DefinitionContext)_localctx).functionDefinition = functionDefinition();
				 _localctx.ast.add(((DefinitionContext)_localctx).functionDefinition.ast);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFunctionContext extends ParserRuleContext {
		public Definition ast;
		public VoidTypeContext voidType;
		public Token main;
		public FunctionBlockContext functionBlock;
		public VoidTypeContext voidType() {
			return getRuleContext(VoidTypeContext.class,0);
		}
		public FunctionBlockContext functionBlock() {
			return getRuleContext(FunctionBlockContext.class,0);
		}
		public MainFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunction; }
	}

	public final MainFunctionContext mainFunction() throws RecognitionException {
		MainFunctionContext _localctx = new MainFunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			((MainFunctionContext)_localctx).voidType = voidType();
			setState(52);
			((MainFunctionContext)_localctx).main = match(T__0);
			setState(53);
			match(T__1);
			setState(54);
			match(T__2);
			setState(55);
			((MainFunctionContext)_localctx).functionBlock = functionBlock();
			 ((MainFunctionContext)_localctx).ast =  new FunctionDefinition((((MainFunctionContext)_localctx).voidType!=null?(((MainFunctionContext)_localctx).voidType.start):null).getLine(), (((MainFunctionContext)_localctx).voidType!=null?(((MainFunctionContext)_localctx).voidType.start):null).getCharPositionInLine()+1,
			                         ((MainFunctionContext)_localctx).functionBlock.ast,
			                         new FunctionType((((MainFunctionContext)_localctx).voidType!=null?(((MainFunctionContext)_localctx).voidType.start):null).getLine(), (((MainFunctionContext)_localctx).voidType!=null?(((MainFunctionContext)_localctx).voidType.start):null).getCharPositionInLine()+1,((MainFunctionContext)_localctx).voidType.ast),
			                         "main");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public TypeContext type;
		public Token id1;
		public Token id2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefinition; }
	}

	public final VariableDefinitionContext variableDefinition() throws RecognitionException {
		VariableDefinitionContext _localctx = new VariableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((VariableDefinitionContext)_localctx).type = type(0);
			setState(59);
			((VariableDefinitionContext)_localctx).id1 = match(ID);
			 _localctx.ast.add(new VariableDefinition((((VariableDefinitionContext)_localctx).type!=null?(((VariableDefinitionContext)_localctx).type.start):null).getLine(), (((VariableDefinitionContext)_localctx).type!=null?(((VariableDefinitionContext)_localctx).type.start):null).getCharPositionInLine()+1, ((VariableDefinitionContext)_localctx).type.ast, (((VariableDefinitionContext)_localctx).id1!=null?((VariableDefinitionContext)_localctx).id1.getText():null)));
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(61);
				match(T__3);
				setState(62);
				((VariableDefinitionContext)_localctx).id2 = match(ID);
				 _localctx.ast.add(new VariableDefinition((((VariableDefinitionContext)_localctx).type!=null?(((VariableDefinitionContext)_localctx).type.start):null).getLine(), (((VariableDefinitionContext)_localctx).type!=null?(((VariableDefinitionContext)_localctx).type.start):null).getCharPositionInLine()+1, ((VariableDefinitionContext)_localctx).type.ast, (((VariableDefinitionContext)_localctx).id2!=null?((VariableDefinitionContext)_localctx).id2.getText():null)));
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionContext extends ParserRuleContext {
		public Definition ast;
		public TypeContext type;
		public Token ID;
		public FunctionParametersContext functionParameters;
		public FunctionBlockContext functionBlock;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public FunctionParametersContext functionParameters() {
			return getRuleContext(FunctionParametersContext.class,0);
		}
		public FunctionBlockContext functionBlock() {
			return getRuleContext(FunctionBlockContext.class,0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((FunctionDefinitionContext)_localctx).type = type(0);
			setState(72);
			((FunctionDefinitionContext)_localctx).ID = match(ID);
			setState(73);
			match(T__1);
			setState(74);
			((FunctionDefinitionContext)_localctx).functionParameters = functionParameters();
			setState(75);
			match(T__2);
			setState(76);
			((FunctionDefinitionContext)_localctx).functionBlock = functionBlock();
			((FunctionDefinitionContext)_localctx).ast =  new FunctionDefinition((((FunctionDefinitionContext)_localctx).type!=null?(((FunctionDefinitionContext)_localctx).type.start):null).getLine(), (((FunctionDefinitionContext)_localctx).type!=null?(((FunctionDefinitionContext)_localctx).type.start):null).getCharPositionInLine()+1,
			                ((FunctionDefinitionContext)_localctx).functionBlock.ast,
			                new FunctionType((((FunctionDefinitionContext)_localctx).type!=null?(((FunctionDefinitionContext)_localctx).type.start):null).getLine(), (((FunctionDefinitionContext)_localctx).type!=null?(((FunctionDefinitionContext)_localctx).type.start):null).getCharPositionInLine()+1, ((FunctionDefinitionContext)_localctx).type.ast, ((FunctionDefinitionContext)_localctx).functionParameters.ast),
			                (((FunctionDefinitionContext)_localctx).ID!=null?((FunctionDefinitionContext)_localctx).ID.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionParametersContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();
		public TypeContext type;
		public Token id1;
		public Token id2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public FunctionParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParameters; }
	}

	public final FunctionParametersContext functionParameters() throws RecognitionException {
		FunctionParametersContext _localctx = new FunctionParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionParameters);
		int _la;
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__35:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				((FunctionParametersContext)_localctx).type = type(0);
				setState(81);
				((FunctionParametersContext)_localctx).id1 = match(ID);
				 _localctx.ast.add(new VariableDefinition((((FunctionParametersContext)_localctx).type!=null?(((FunctionParametersContext)_localctx).type.start):null).getLine(), (((FunctionParametersContext)_localctx).type!=null?(((FunctionParametersContext)_localctx).type.start):null).getCharPositionInLine()+1, ((FunctionParametersContext)_localctx).type.ast, (((FunctionParametersContext)_localctx).id1!=null?((FunctionParametersContext)_localctx).id1.getText():null)));
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(83);
					match(T__3);
					setState(84);
					((FunctionParametersContext)_localctx).id2 = match(ID);
					 _localctx.ast.add(new VariableDefinition((((FunctionParametersContext)_localctx).type!=null?(((FunctionParametersContext)_localctx).type.start):null).getLine(), (((FunctionParametersContext)_localctx).type!=null?(((FunctionParametersContext)_localctx).type.start):null).getCharPositionInLine()+1, ((FunctionParametersContext)_localctx).type.ast, (((FunctionParametersContext)_localctx).id2!=null?((FunctionParametersContext)_localctx).id2.getText():null)));
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBlockContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public VariableDefinitionContext variableDefinition;
		public StatementContext statement;
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBlock; }
	}

	public final FunctionBlockContext functionBlock() throws RecognitionException {
		FunctionBlockContext _localctx = new FunctionBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__5);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35))) != 0)) {
				{
				{
				setState(94);
				((FunctionBlockContext)_localctx).variableDefinition = variableDefinition();
				_localctx.ast.addAll(((FunctionBlockContext)_localctx).variableDefinition.ast);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__17) | (1L << T__30) | (1L << REAL_CONSTANT) | (1L << ID) | (1L << INT_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
				{
				{
				setState(102);
				((FunctionBlockContext)_localctx).statement = statement();
				_localctx.ast.addAll(((FunctionBlockContext)_localctx).statement.ast);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public IfElse ifelse = new IfElse();
		public ExpressionContext exp1;
		public ExpressionContext exp2;
		public Token w;
		public ExpressionContext expression;
		public BlockContext block;
		public Token i;
		public BlockContext b1;
		public BlockContext b2;
		public Token r;
		public Token read;
		public ExpressionContext exps2;
		public Token write;
		public Token ID;
		public FunctionArgumentsContext functionArguments;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public FunctionArgumentsContext functionArguments() {
			return getRuleContext(FunctionArgumentsContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}
